[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensiometer"
dynamic = ["version"]
description = "Tension tools for posterior distributions"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
  { name = "Marco Raveri" }
]
keywords = ["MCMC", "cosmology", "statistics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
  "tqdm",
  "joblib",
  "coverage",
  "matplotlib",
  "psutil",
  "numpy",
  "scipy",
  "sphinx",
  "sphinxcontrib-jquery",
  "sphinx-rtd-theme",
  "GetDist",
  "autograd",
  "pymanopt==0.2.5",
  "gast==0.4.0",
  "numba>=0.53.0",
  "numdifftools",
  "tensorflow>=2.16.0",
  "tensorflow_probability>=0.24.0",
  "mpi4py",
  "IPython",
]

[project.urls]
Source = "https://github.com/mraveri/tensiometer"
Tracker = "https://github.com/mraveri/tensiometer/issues"
Reference = "https://arxiv.org/abs/1806.04649"
Licensing = "https://raw.githubusercontent.com/mraveri/tensiometer/master/LICENSE"
Documentation = "https://tensiometer.readthedocs.io"

[project.optional-dependencies]
docs = ["sphinx", "sphinxcontrib-jquery", "sphinx-rtd-theme"]
dev = [
  "pytest",
  "pytest-cov",
  "build",
  "twine",
  "sphinx",
  "sphinxcontrib-jquery",
  "sphinx-rtd-theme",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["tensiometer*"]

[tool.setuptools.dynamic]
version = { attr = "tensiometer.__version__" }
